Folio.nnwtheme/stylesheet.css
:root {
  --header-color: rgba(0, 0, 0, 0.3);
  --body-code-color: #666;
  --system-message-color: #cbcbcb;
  --article-title-color: #333;
  --article-date-color: rgba(0, 0, 0, 0.3);
  --table-cell-border-color: lightgray;
  --favicon-size: 32px;
}

@media (prefers-color-scheme: dark) {
  :root {
    --header-color: rgba(94, 158, 244, 1);
    --body-code-color: #b2b2b2;
    --system-message-color: #5f5f5f;
    --article-title-color: #e0e0e0;
    --article-date-color: rgba(255, 255, 255, 0.5);
    --table-cell-border-color: dimgray;
  }
}

body {
  word-wrap: break-word;
  margin-top: 20px;
  margin-bottom: 64px;
  padding-left: calc(var(--favicon-size) + 2ch);
  padding-right: calc(var(--favicon-size) + 2ch);
  font-family: ui-serif, -apple-system;
}

a {
  color: inherit !important;
  text-decoration: underline;
  text-decoration-color: lightgray;

  &:hover {
    text-decoration: underline;
    text-decoration-color: inherit;
  }
}

.author {
  padding-top: 2px;
  font-size: 0.8333em;
  font-variant: small-caps;
  text-transform: uppercase;
  letter-spacing: 0.2em;
}

.byline {
  margin-left: calc(var(--favicon-size) * -1 - 1ch);
  color: var(--body-code-color);
  padding-top: 0.2em;
  padding-bottom: 0.2em;
  font-size: 0.8333em;
  line-height: 1.4;
}

.favicon {
  width: 32px;
  height: 32px;
  float: left;
  margin-inline-end: 1ch;
}

.systemMessage {
  position: absolute;
  top: 45%;
  left: 50%;
  transform: translateX(-55%) translateY(-50%);
  -webkit-user-select: none;
  cursor: default;
  color: var(--system-message-color);
}

.rightAlign {
  text-align: end;
}

.leftAlign {
  text-align: start;
}

.article {
  max-width: 60ch;
  margin-inline: auto;
}

.articleTitle {
  text-wrap: pretty;
  color: var(--article-title-color);
  margin-top: 26px;
  margin-bottom: 17px;
  font-size: 1.728em;
  line-height: 1.2;

  a:link,
  a:visited {
    color: inherit;
    text-decoration: none;
  }
}

.articleDateline,
.articleDatelineTitle {
  color: rgba(124, 124, 124, 1);

  a:link,
  a:visited {
    color: rgba(166, 166, 166, 1);
    font-weight: normal;
  }
}

.articleDateline {
  a:link,
  a:visited {
    color: rgba(166, 166, 166, 1);
  }
}

.articleDatelineTitle {
  a:link,
  a:visited {
    color: var(--article-title-color);
  }
}

.externalLink {
  margin-bottom: 5px;
  font-style: italic;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.articleBody {
  hyphens: auto;
  text-align: justify;
  margin-top: 20px;
  line-height: 1.6;
}

code,
pre {
  color: var(--body-code-color);
  font-family: "SF Mono", Menlo, "Courier New", Courier, monospace;
  font-size: 0.95em;
  hyphens: none;
}

pre {
  max-width: 100%;
  margin-left: auto;
  padding: 1em;
  overflow: auto;
  overflow-y: hidden;
  word-wrap: normal;
  word-break: normal;
  line-height: 1.4286;

  code {
    letter-spacing: -0.027em;
    font-size: 0.9375em;
  }
}

.nnw-overflow {
  overflow-x: auto;
}

/*
Instead of the last-child bits, border-collapse: collapse
could have been used. However, then the inter-cell borders
overlap the table border, which looks bad.
 */
.nnw-overflow {
  table {
    margin-bottom: 1px;
    border-spacing: 0;
    border: 1px solid var(--secondary-accent-color);
    font-size: inherit;

    &[border="0"] {
      border-width: 0;
    }

    table {
      margin-bottom: 0;
      border: none;
    }
  }

  td,
  th {
    hyphens: none;
    word-break: normal;
    border: 1px solid var(--table-cell-border-color);
    border-top: none;
    border-left: none;
    padding: 5px;

    pre {
      border: none;
      padding: 0;
    }
  }

  tr :matches(td, th):last-child {
    border-right: none;
  }

  :matches(thead, tbody, tfoot):last-child > tr:last-child :matches(td, th) {
    border-bottom: none;
  }
}


img,
figure,
video,
div,
object {
  max-width: 100%;
  height: auto !important;
  margin: 0 auto;
}

iframe {
  max-width: 100%;
  margin: 0 auto;

  &.nnw-constrained {
    max-height: 50vw;
  }
}


figure {
  margin-bottom: 1em;
  margin-top: 1em;
}

figcaption {
  color: var(--body-code-color);
  font-size: 0.8em;
  line-height: 1.3;
}

sup {
  vertical-align: top;
  position: relative;
  bottom: 0.2rem;
}

sub {
  vertical-align: bottom;
  position: relative;
  top: 0.2rem;
}

hr {
  border: none;
  background-color: var(--table-cell-border-color);
  height: 1px;
  margin-top: 1em;
}

.iframeWrap {
  position: relative;
  display: block;
  padding-top: 56.25%;

  iframe {
    position: absolute;
    top: 0;
    left: 0;
    height: 100% !important;
    width: 100% !important;
  }
}

blockquote {
  border-left: 1.5px solid color(srgb 0.947 0.947 0.947);
  margin: 1.5em 0;
  padding: 0.5em 1em;
  color: color(srgb 0.383 0.383 0.383);

  & > blockquote {
    padding-left: 1em;
    padding-top: 0;
    padding-bottom: 0;
    font-style: italic;
  }

  & > :first-child {
    margin-block-start: 0;
  }

  & > :last-child {
    margin-block-end: 0;
  }
}

pre {
  background: color(srgb 0.947 0.947 0.947);
}

p code {
  background: color(srgb 0.947 0.947 0.947);
  padding: 0.2em;
  font-size: 0.9em;
}

@media (prefers-color-scheme: dark) {
  blockquote {
    border-left: 1.5px solid rgba(49, 49, 49, 1);
    color: rgba(195, 195, 195, 1);
  }

  pre {
    background: rgba(49, 49, 49, 1);
  }

  p code {
    background: rgba(49, 49, 49, 1);
  }
}


/* Hide the external link at the bottom of Daring Fireball posts */

.x-netnewswire-hide {
  display: none;
}

/* see removeWpSmiley; this rule is kept in case a wp-smiley is encountered without alt text */

.wp-smiley {
  height: 1em;
  max-height: 1em;
}

/* Twitter */

.twitterAvatar {
  vertical-align: middle;
  border-radius: 4px;
  height: 1.7em;
  width: 1.7em;
}

.twitterUsername {
  line-height: 1.2;
  margin-left: 4px;
  display: inline-block;
  vertical-align: middle;
}

.twitterScreenName {
  font-size: 66%;
}

.twitterTimestamp {
  font-size: 66%;
}

/* Newsfoot specific styles. Structural styles come first, theme styles second */
.newsfoot-footnote-container {
  position: relative;
  display: inline-block;
  z-index: 9999;
}

.newsfoot-footnote-popover {
  position: absolute;
  display: block;
  margin: 1em;
  top: 0.75em;
  max-width: none;
  border-radius: 0.3em;
  box-sizing: border-box;
  background: #ccc;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5), 0 3px 6px rgba(0, 0, 0, 0.25);
  color: black;
  padding: 1px;
  left: calc(-1 * (50vw - 1em));
  right: calc(-1 * (50vw - 1em));

  .reversefootnote,
  .footnoteBackLink,
  .footnote-return,
  a[href*='#fn'] {
    display: none;
  }
}

.newsfoot-footnote-popover-arrow {
  content: '';
  display: block;
  width: 1em;
  position: absolute;
  top: -0.5em;
  left: calc(50% - 0.5em);
  height: 1em !important;
  transform: rotate(45deg);
  z-index: 0;
  background: #fafafa;
  border: 1px solid #ccc;
}

.newsfoot-footnote-popover-inner {
  border-radius: calc(0.3em - 1px);
  padding: 1em;
  position: relative;
  z-index: 1;
  background: #fafafa;

  :first-child {
    margin-top: 0;
  }

  :last-child {
    margin-bottom: 0;
  }
}

sup[id^='fn'] {
  vertical-align: baseline;
}

a.footnote {
  display: inline-block;
  text-decoration: none;
  padding: 0.05em 0.75em;
  border-radius: 1em;
  min-width: 1em;
  text-align: center;
  font-size: 0.8em;
  line-height: 1em;
  position: relative;
  top: -0.1em;
}

body a.footnote,
body a.footnote:visited,
.newsfoot-footnote-popover + a.footnote:hover {
  background: #aaa;
  color: white;
  transition: background-color 200ms ease-out;
}

a.footnote:hover,
.newsfoot-footnote-popover + a.footnote {
  background: #666;
  transition: background-color 200ms ease-out;
}

/* dark */
@media screen and (prefers-color-scheme: dark) {
  .newsfoot-footnote-popover {
    background: #444;
    color: rgb(224, 224, 224);
  }

  .newsfoot-footnote-popover-arrow {
    background: #242424;
    border-color: #444;
  }

  .newsfoot-footnote-popover-inner {
    background: #242424;
  }

  body a.footnote,
  body a.footnote:visited,
  .newsfoot-footnote-popover + a.footnote:hover {
    background: #aaa;
    color: white;
  }

  a.footnote:hover,
  .newsfoot-footnote-popover + a.footnote {
    background: #666;
  }
}

/* iOS Specific */
@supports (-webkit-touch-callout: none) {
  body {
    margin-top: 3px;
    margin-bottom: 20px;
    padding-left: 20px;
    padding-right: 20px;
    word-break: break-word;
    hyphens: auto;
    -webkit-text-size-adjust: none;
  }

  :root {
    color-scheme: light dark;
    font-size: [[font-size]]px;

    --secondary-accent-color: #000;
    --block-quote-border-color: rgba(8, 106, 238, 0.75);
  }

  @media (prefers-color-scheme: dark) {
    :root {
      --secondary-accent-color: #fff;
      --block-quote-border-color: rgba(94, 158, 244, 0.75);
    }
  }

  body a,
  body a:visited {
    color: var(--secondary-accent-color);
  }

  .nnw-overflow table {
    border: none;
  }

  .activityIndicatorWrap {
    position: relative;
  }

  .activityIndicator {
    z-index: 1;
    width: 64px;
    height: 64px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

/* macOS Specific */
@supports not (-webkit-touch-callout: none) {
  .smallText {
    font-size: 78.125%;
  }

  .mediumText {
    font-size: 93.75%;
  }

  .largeText {
    font-size: 112.5%;
  }

  .xlargeText {
    font-size: 135%;
  }

  .xxlargeText {
    font-size: 162%;
  }

  :root {
    color-scheme: light dark;

    --accent-color: #000;
    --block-quote-border-color: #000;
  }

  @media (prefers-color-scheme: dark) {
    :root {
      --accent-color: #eee;
      --block-quote-border-color: #eee;
    }
  }

  body a,
  body a:visited {
    color: var(--accent-color);
  }
}

/* Block ads and junk */

iframe[src*="feedads"],
iframe[src*="doubleclick"],
iframe[src*="plusone.google"] {
  display: none !important;
}

a[href*=".ads."],
a[href*="feedads"],
a[href*="doubleclick"],
a[href*="//ads."],
a[href*="api.tweetmeme"],
a[href*="delicious.com/post?"],
a[href*="digg.com/submit?"],
a[href*="google.com/bookmarks/mark?"],
a[href*="posterous.com/share?"],
a[href*="tumblr.com/share?"],
a[href*="linkedin.com/shareArticle?"],
a[href*="facebook.com/share.php?"],
a[href*="twitter.com/home?"],
a[href*="addtoany.com/share_save"] {
  display: none !important;
}

img[src*=".ads."],
img[src*="//ads."],
img[src*="doubleclick"],
img[src*="feedads"],
img[src*="feedburner"],
img[src*="feedblitz"],
img[src*="share-buttons"] {
  display: none !important;
}

